// Copyright 2019 The Chromium OS Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package apibq;

import "google/protobuf/timestamp.proto";

message ChangeHistory{
  string id = 1;
  string hostname = 2;

  string label = 3; // What is changed, e.g. servo_port.
  string old_value = 4;
  string new_value = 5;

  google.protobuf.Timestamp updated_time = 6;

  message User{
    string name = 1;
    string email = 2;
  }
  User by_whom = 7;
  string comment = 8;
}
